updates index.html and config.yml

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,7 @@
 baseurl: ""
 url: "https://amarschn.github.io"
+collections:
+  tools:
+    output: true
+    permalink: /tools/:path/
 include: ["tools", "docs"]
